Project setting optimized

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,6 @@ Roboto_Slab/static/RobotoSlab-Medium.ttf
 Roboto_Slab/static/RobotoSlab-Regular.ttf
 Roboto_Slab/static/RobotoSlab-SemiBold.ttf
 Roboto_Slab/static/RobotoSlab-Thin.ttf
+Every Day Quote.exe
+Every Day Quote.pck
+logo.svg
