Added logo and icon

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,10 @@ Roboto_Slab/static/RobotoSlab-Thin.ttf
 Every Day Quote.exe
 Every Day Quote.pck
 logo.svg
+EveryDayQuote.exe
+EveryDayQuote.pck
+logo.svg.import
+rect31.png.import
+rect31.png
+rect64.png
+rect64.png.import
