Clean up, and license update

--- a/.gitignore
+++ b/.gitignore
@@ -7,29 +7,4 @@ export_presets.cfg
 # Mono-specific ignores
 .mono/
 data_*/
-Roboto_Slab.zip
-Roboto_Slab/LICENSE.txt
-Roboto_Slab/README.txt
-Roboto_Slab/RobotoSlab-VariableFont_wght.ttf
-Roboto_Slab/static/RobotoSlab-Black.ttf
-Roboto_Slab/static/RobotoSlab-Bold.ttf
-Roboto_Slab/static/RobotoSlab-ExtraBold.ttf
-Roboto_Slab/static/RobotoSlab-ExtraLight.ttf
-Roboto_Slab/static/RobotoSlab-Light.ttf
-Roboto_Slab/static/RobotoSlab-Medium.ttf
-Roboto_Slab/static/RobotoSlab-Regular.ttf
-Roboto_Slab/static/RobotoSlab-SemiBold.ttf
-Roboto_Slab/static/RobotoSlab-Thin.ttf
-Every Day Quote.exe
-Every Day Quote.pck
-logo.svg
-EveryDayQuote.exe
-EveryDayQuote.pck
-logo.svg.import
-rect31.png.import
-rect31.png
-rect64.png
-rect64.png.import
-Quotes - Copy.txt
-bin/myquote.exe
-bin/Quotes.txt
+ignore/*
